# unicode-table

./: .ghci  .ghcid  .gitignore  LICENSE  README.md  stack.yaml  unicode-table.cabal
example/: .Main.hs.swp  Main.hs
src/Text/: UnicodeTable.hs
